@@ -51,6 +51,8 @@
 			<li>default <input type="text" class="val" value="123" /></li>
 			<li>default (html) <span class="useHtml">123</span></li>
 			<li>symbol <span class="symbol">123</span></li>
+			<li>dropDecimals <span class="dropDecimals">123.00</span></li>
+			<li>dropDecimals and roundDown <span class="dropDecimalsRounding">123.66</span></li>
 			<li>positiveFormat <span class="positiveFormat">123</span></li>
 			<li>negativeFormat <span class="negativeFormat">-123</span></li>
 			<li>decimalSymbol <span class="decimalSymbol">123</span></li>
